# INMOST_Projects

./: .gitignore  2d_dens_driven_flow.cpp  2d_diffusion_fem.cpp  2d_diffusion_fem_ad.cpp  2d_diffusion_mfd.cpp  2d_diffusion_vem.cpp  2d_elasticity_fem.cpp  2d_poisson_fem.cpp  3d_diffusion_vem.cpp  CMakeLists.txt  README.md  unit_square.vtk  unit_square5.vtk  unit_square_2.vtk  unit_square_3.vtk  unit_square_4.vtk
meshes/: square1.geo  unit_square1.vtk  unit_square2.vtk  unit_square3.vtk  unit_square4.vtk  unit_square6.vtk  unit_square_1.vtk  unit_square_exp.vtk  unit_square_quad1.vtk  unit_square_quad2.vtk  unit_square_quad3.vtk  unit_square_quad5.vtk  unit_square_quad7.vtk
